# ignacio-bot

./: .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT.md  PLAN.md  PRE_COMMIT_SETUP.md  README.md  SPECS.md  TODO.md  docker-compose.prod.yml  docker-compose.yml  test_env_config.py
.claude/: AUTH0_SETUP.md  CLAUDE.md  DATABASE.md  MIGRATIONS.md  PLAN.md  SPECS.md  STATUS.md  TODO.md  settings.local.json
.old_frontend/: Dockerfile  nginx.conf  tailwind.config.js
backend/: .env.example  .secrets.baseline  Dockerfile  README.md  fly.toml  pyproject.toml  pytest.ini  quick_test.py  requirements.txt  test_agent.py  test_agent_system.py  test_handoff_hooks.py
backend/app/: main.py
backend/app/ai_system_prompts/: __init__.py  finance_expert_instructions.py  legal_compliance_expert_prompt.py  marketing_expert_prompt.py  product_design_expert_prompt.py  research_operations_domain_prompt.py  sales_expert_prompt.py  sustainability_expert_prompt.py  technology_domain_expert.py
backend/app/auth/: __init__.py  dependencies.py  exceptions.py  jwt_validator.py  models.py  user_service.py
backend/app/core/: auth.py  config.py  database.py  migrations.py  supertokens_config.py
backend/app/models/: database.py
backend/app/routers/: admin.py  admin_users.py  auth.py  chat.py  files.py  health.py  project.py  prompt_templates.py  users.py  whatsapp_auth.py
backend/app/services/: ai_service.py  database.py  openai_file_service.py  project_context_service.py  storage.py
backend/migrations/: 001_initial_tables.sql  002_add_openai_fields_to_user_files.sql  003_agent_sdk_enhancement.sql  004_agent_sdk_data_migration.sql  005_add_project_id_to_conversations.sql  006_add_conversation_id_to_user_files.sql  007_add_prompt_templates.sql  008_add_template_type_to_prompt_templates.sql  009_add_file_reuse_tracking.sql  010_add_auth_user_id_to_public_users.sql  010_add_auth_user_id_to_users.sql  011_create_user_sync_triggers.sql  011_make_phone_number_optional copy.sql  012_add_user_email.sql  012_create_rls_policies.sql  README_AGENT_SDK_MIGRATION.md
backend/scripts/: dev.sh  lint.sh  migrate.sh
backend/tests/: __init__.py  conftest.py  test_ai_service.py  test_chat_api.py  test_database_service.py  test_health_api.py
backend/tests/utils/: fixtures.py  mocks.py
frontend/: .env.example  .prettierignore  Dockerfile  Dockerfile.dev  entrypoint.sh  eslint.config.js  fly.toml  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  (+2 more)
migrations/: 004_create_temporary_user.sql
(+94 files in other folders)
