[project]
name = "ignacio-bot-backend"
version = "1.0.0"
description = "Backend API for Ignacio, a chat assistant that helps users develop their projects as part of the Action Lab education program"
authors = [
    {name = "Ignacio Bot Team"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]==0.116.1",
    "uvicorn[standard]==0.32.1",
    "supabase==2.18.1",
    "asyncpg==0.30.0",
    "sqlalchemy[asyncio]==2.0.36",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.20",
    "openai-agents>=0.1.0",
    "openai>=1.57.0",
    "pydantic==2.11.7",
    "requests==2.32.3",
    "httpx==0.28.1",
    "python-dotenv==1.0.1",
    "pydantic-settings==2.7.0",
    "python-dateutil==2.9.0",
    "pillow==11.0.0",
    "supertokens-python>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "black==24.10.0",
    "isort==5.13.2",
    "mypy==1.13.0",
    "ruff==0.8.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "black==24.10.0",
    "isort==5.13.2",
    "mypy==1.13.0",
    "ruff==0.8.4",
    "pytest-mock>=3.14.1",
    "pytest-cov>=6.2.1",
    "pre-commit>=4.3.0",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
